--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.20.0",
+    "@xenova/transformers": "^2.17.2",
+    "canvas": "^2.11.2",
+    "next": "14.0.4",
+    "onnxruntime-node": "^1.18.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "typescript": "^5",
