--- a/package.json
+++ b/package.json
@@ -14,19 +14,22 @@
     "canvas": "^2.11.2",
     "next": "14.0.4",
     "onnxruntime-node": "^1.18.0",
+    "pngjs": "^7.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/pngjs": "^6.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "typescript": "^5"
   }
 }
